--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,24 +61,26 @@ ul li {
     text-decoration-thickness: 5px;
 }
 
-  li {
+li {
     float: right;
     padding: 5px;
     line-height: 10px;
 
-  }
+}
   
-  li a {
+li a {
     display: block;
     color: rgb(31, 154, 163);
     text-align: center;
     padding: 14px 16px;
-  }
+
+}
   
 
-  li a:hover {
+li a:hover {
     background-color: white;
- }
+
+}
 
 
 .aboutme,
@@ -107,6 +109,7 @@ ul li {
     width: 70%;
 
 }
+
 #resumep,
 #workp {
     font-size: 30px;
@@ -117,19 +120,19 @@ ul li {
     align-items: center;
     justify-content: space-evenly;
     margin-right: 5%;
-    width: 70%;
-    
-}
-#resumep img{
-    width: 100%;
-    margin-bottom: -.75%;
-    align-items: center;
+    width: 70%;   
+
 }
 
-#resumep a {
-    margin: 0;
-    padding: 0;
+#resumep img{
+    display: flex;
+    width: 100%;
+    margin-bottom: -.1%;
+    align-items: center;
+
 }
+
+
 #workp {
    
     color: rgb(255, 255, 255);
@@ -157,24 +160,14 @@ ul li {
     min-width: 200px;
 }
 
-#bigproject {
-    font-size: 30px;
-    color: rgb(96, 124, 165);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* display: flex; */
-    border: 10px solid rgb(115, 224, 228);
-    align-items: center;
-    justify-content: left;
-    margin-right: 5%;
-    width: 100%;
 
-}
 
 #workp a img {
     width: 100%;
     height: 380px;
     margin-bottom: -2%;
 }
+
 #work2p a {
     margin: 0;
     padding: 0;
@@ -206,6 +199,17 @@ ul li {
     top: 1440px;
     background-color: rgb(115, 224, 228);
 }
+
+#troublemakerThree {
+    display: inline;
+    position: absolute;
+    left: 63vw;
+    color: rgb(96, 124, 165);
+    top: 1440px;
+    background-color: rgb(115, 224, 228);
+    
+}
+
 #work2p a img{
     
     width: 100%;
@@ -227,12 +231,14 @@ ul li {
     margin-right: 5%;
     
 }
+
 #aboutmep img {
     width: 100%;
     height: 38px;
     justify-content: left;
 
 }
+
 #contactmep,
 .contactmelinks {
     margin-top: 2%;
@@ -257,7 +263,8 @@ ul li {
 @media only screen and (max-width: 950px){
     #label,
     #troublemaker,
-    #troublemakerTwo {
+    #troublemakerTwo,
+    #troublemakerThree {
         display: none;
     }
 } 
