--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,8 +133,20 @@ li a:hover {
     
 }
 
-
-
+#work2pp,
+#work2p {
+    margin: 0;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* display: flex; */
+    border: 10px solid rgb(115, 224, 228);
+    align-items: flex-end;
+    justify-content: left;
+    width: 30.5%;
+    margin-right: 5%;
+    
+}
 
 
 #aboutmeside,
@@ -163,22 +175,30 @@ li a:hover {
 
 }
 
-#workp a img {
+#workp a img,
+#work2p a img {
     width: 100%;
     height: 380px;
     margin-bottom: -2%;
     opacity: 1;
 }
 
-#work2p a img {
-    
+
+#aboutmep img {
     width: 100%;
-    height: 380px;
-    margin-bottom: -2%;
+    height: 38px;
+    justify-content: left;
+
 }
 
-#workp img:hover{
+#workp img:hover {
     opacity: .5;
+
+}
+
+#work2p img:hover {
+    opacity: .5;
+
 }
 
 #work2p a {
@@ -224,27 +244,9 @@ li a:hover {
 }
 
 
-#work2pp,
-#work2p {
-    margin: 0;
-    font-size: 30px;
-    color: rgb(255, 255, 255);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* display: flex; */
-    border: 10px solid rgb(115, 224, 228);
-    align-items: flex-end;
-    justify-content: left;
-    width: 30.5%;
-    margin-right: 5%;
-    
-}
 
-#aboutmep img {
-    width: 100%;
-    height: 38px;
-    justify-content: left;
 
-}
+
 
 #contactmep,
 .contactmelinks {
