--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,8 @@ header {
     color: rgb(115, 224, 228);
 }
 
-
+/* deleted text decoration, flex direction, border, and overflow as they weren't needed/didn't benefit the look */
+/* fixed margins and padding px for text to fit the area better */
 h1 {
     margin: -5px -20px ;
     color: #333;
