added overflow and changed list-style-type to none for the ul in header section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,8 @@ div {
     
 }
 
+/* deleted flex direction and background color to change the location of text and fix the visuals in css  */
+/* added overflow and changed list-style-type to none */
 ul {
     list-style-type: none;
     margin: 0;
