made underlines thicker under the different sections in the ul tag in the header section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ ul {
 
 }
 
+/* changed text decoration thickness in header area (ul li) to make a thicker underline beneath the different sections */
 ul li {
     text-decoration-line: underline;
     text-decoration-thickness: 5px;
