--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ h1 {
     padding: 10px 22px;
 }  
 
-/* deleted background size and background position properties since they weren't neccessary*/
+/* deleted background size and background position properties since they weren't necessary*/
 /* added background image and fixed positioning with height, width and margin-bottom */
 .top {
     height: 190px;
@@ -139,7 +139,6 @@ li a:hover {
     font-size: 30px;
     color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* display: flex; */
     border: 10px solid rgb(115, 224, 228);
     align-items: flex-end;
     justify-content: left;
